# Document-Storage-App

./: .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json
.github/workflows/: backend-deploy.yml  deploy-backend.yml  frontend-deploy.yml  hello-world.yml  infrastructure-deploy.yml  test-pipeline.yml
.history/.github/workflows/: infrastructure-deploy_20251007194150.yml  (+5 more)
backend/: README.md  pyproject.toml
backend/lambda_functions/chat_handler/: handler.py
backend/lambda_functions/delete_file/: handler.py  index.py
backend/lambda_functions/download_file/: handler.py  index.py
backend/lambda_functions/list_files/: handler.py  index.py
backend/lambda_functions/mcp_handler/: handler.py  requirements.txt
backend/lambda_functions/share_file/: handler.py  index.py
backend/lambda_functions/shared_link/: handler.py
backend/lambda_functions/upload_file/: handler.py  index.py
backend/tests/: conftest.py  test_chat_handler.py  test_delete_file.py  test_download_file.py  test_list_files.py  test_mcp_handler.py  test_share_file.py  test_shared_link.py  test_upload_file.py
docs/: DEPLOYMENT.md  architecture.md  database-schema.md  monitoring.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  aws-exports.ts  index.tsx  setupTests.ts
infrastructure/cloudformation/: auth.yml  backend.yml  frontend.yml  infrastructure.yml  monitoring.yml
scripts/: package-lambdas.sh
tests/integration/: integration_config.json  test_agent_chat.py  test_file_operations.py  test_mcp_direct.py
(+38 files in other folders)
