[project]
name = "document-storage-backend"
version = "0.1.0"
description = "Lambda functions for cloud file storage API"
authors = [
    {name = "jkuschner",email = "joshua.kuschner@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
