[project]
name = "document-storage-backend"
version = "0.1.0"
description = "Lambda functions for cloud file storage API"
authors = [
    {name = "jkuschner",email = "joshua.kuschner@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "boto3 (>=1.40.47,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
